fixed about overflow

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,15 +1,16 @@
-.page_container {
+.content_container {
+  margin-top: 100px;
+  position: relative;
+  top: 0;
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  margin: 0%;
+  justify-content: center;
 }
 
-.content_container {
-  flex: 1;   
+.inner_content_container{
   width: 75%;           
   display: flex;         
-  justify-content: center; 
-  align-items: center;   
+
 }
 
 .content_container span {
@@ -37,6 +38,7 @@
   width: 100px;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 25px;
 }
 
 .icons img {
